# web_quic_star

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  justfile  run_dev.sh  run_prod.sh  simple_coding_standards.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: bench.yml  codspeed.yml  github-ci.yml
crates/anchor-client/: Cargo.toml
crates/anchor-client/example/src/: blocking.rs  nonblocking.rs
crates/anchor-client/src/: lib.rs
crates/axum-login/: Cargo.toml
crates/axum-login/src/: middleware.rs  session.rs
crates/derive_builder/: Cargo.toml
crates/derive_builder_core/: Cargo.toml
crates/derive_builder_core/src/: builder.rs  builder_field.rs  lib.rs
crates/derive_builder_core/src/macro_options/: darling_opts.rs
crates/derive_builder_macro/: Cargo.toml
crates/derive_builder_macro/src/: lib.rs
crates/diesel_logger/src/: lib.rs
migrations/2024-10-09-073215_create_auth/: down.sql  up.sql
migrations/2025-11-26-071432_create_req_record/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  schema_view.rs  web_middleware.rs
src/api/: auth.rs  group_permission.rs  mod.rs  upload.rs  user.rs
src/api_router/: auth.rs  docs.rs  group.rs  group_permission.rs  mod.rs  permission.rs  upload.rs  user.rs
src/api_wrapper/: uni_graph.rs  uni_graph_params.rs
src/config/: mod.rs
src/db_model/: db_enum.rs  group.rs  mod.rs  req_record.rs  user.rs  user_with_group_views.rs
src/db_models/: group.rs  group_permission.rs  mod.rs  user.rs  user_with_group_views.rs
src/domain/: eth_addr.rs  solana_addr.rs
src/framework/: api.rs  auth.rs  db.rs  errors.rs  handler.rs  mod.rs  pg.rs
src/framework/api_doc/: axum_json_for_schema.rs  docs.rs  errors.rs  mod.rs
src/middleware/: mod.rs  save_req.rs
src/scheduled_task/: mod.rs
src/subscribe/: mod.rs
src/third_party_api/: uni_graph.rs
src/util/: datetime.rs  file.rs  mod.rs  num_fmt.rs  slice.rs  tokio.rs
src/util/contracts/: erc20.rs  uni_factory.rs  uni_pair.rs  uni_router2.rs  usdt.rs
src/util/eth_contracts/: erc20.rs  mod.rs  uni_factory.rs  uni_pair.rs  uni_router2.rs  usdt.rs
src/utils/: datetime.rs  file.rs  mod.rs
src/utils/contracts/: mod.rs  uni_factory.rs  uni_pair.rs  uni_router2.rs  usdt.rs
tests/: db_driver.rs  t1.rs
