[package]
name = "web3_quick"
version = "0.1.0"
edition = "2024"

[profile.dev]
codegen-units = 32
[features]
default = ["postgres", "eth_mode", "solana_mode", "dev"]
eth_mode = ["dep:alloy"]
solana_mode = ["dep:anchor-client", "dep:anchor-spl"]
dev = []
postgres = ["diesel/postgres", "diesel-dynamic-schema/postgres", "rust_decimal/db-diesel-postgres"]


#mysql = ["diesel/mysql", "diesel-dynamic-schema/mysql", "diesel-derive-enum/mysql","dep:r2d2_mysql"]

[dependencies]
#web ========
axum = { version = "0.8", features = ["macros", "http2"] }
axum-login = { git = "https://github.com/Julian332/axum-login" }
aide = { git = "https://github.com/tamasfe/aide", features = ["swagger", "scalar", "axum", "macros", "axum-tokio", "axum-multipart", "axum-json", "axum-ws", "axum-form", "axum-matched-path", "axum-original-uri", "axum-query"] }
password-auth = "1.0.0"
tower-http = { version = "0.6", features = ["catch-panic", "cors", "trace", "fs", "limit", "normalize-path"] }
http = { version = "1" }
tower-sessions = { version = "0.14", features = ["memory-store"] }
url = { version = "2", features = ["serde"] }
#log =======
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

#db ========
diesel = { version = "2", features = ["chrono", "serde_json", "uuid", "r2d2", ] }
diesel-dynamic-schema = "0.2"
r2d2 = "0.8.10"
rust_decimal = { version = "1", features = ["serde-str", "macros", "db-diesel2-postgres", "maths"] }
chrono = { version = "0.4", features = ["serde"] }
diesel-enum = { version = "0.2", features = [] }
diesel_logger = { git = "https://github.com/Julian332/diesel-logger" }

#solana ======
anchor-client = { version = "0.31.1", optional = true, features = ["async"] }
anchor-spl = { version = "0.31.1", features = ["default"], optional = true }
#eth ========
alloy = { version = "1", features = ["full", "reqwest-rustls-tls", "std", "essentials", ], optional = true, default-features = false }

#etc =======
tokio = { version = "1", features = ["full"] }
schemars = { version = "1", features = ["rust_decimal1", "chrono04", "uuid1", "url2"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["default"] }
anyhow = { version = "1", features = [] }
#strum = { version = "0.27", features = ["default", "derive"] }
dotenvy = "0.15"
envy = { version = "0.4" }
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls", "charset", "http2", "macos-system-configuration", ], default-features = false }
futures = "0.3"
tokio-cron-scheduler = { version = "0.14.0", features = ["default"] }
derive_builder = { path = "crates/derive_builder" }
derive_more = { version = "2", features = ["full"] }
tokio-util = "0.7"
sha2 = "0.10"
[dev-dependencies]
r2d2_postgres = { version = "0.18.2", features = [] }