[package]
name = "web3_quick"
version = "1.0.0"
edition = "2024"

[profile.dev]
codegen-units = 32
[features]
default = ["postgres", "eth_mode", "solana_mode", "dev"]
eth_mode = ["dep:alloy"]
solana_mode = ["dep:anchor-client"]
dev = []
postgres = ["diesel-dynamic-schema/postgres", "rust_decimal/db-diesel-postgres", "diesel_migrations/postgres", "diesel-async/postgres"]


#mysql = ["diesel/mysql", "diesel-dynamic-schema/mysql", "diesel-derive-enum/mysql","dep:r2d2_mysql"]

[dependencies]
#web ========
axum = { version = "0.8", features = ["macros", "http2"] }
axum-login = { git = "https://github.com/Julian332/axum-login" }
aide = { git = "https://github.com/tamasfe/aide", features = ["swagger", "scalar", "axum", "macros", "axum-tokio", "axum-multipart", "axum-json", "axum-ws", "axum-form", "axum-matched-path", "axum-original-uri", "axum-query"] }
password-auth = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "normalize-path"] }
http = { version = "1" }
tower-sessions = { version = "0.14", features = ["memory-store"] }
url = { version = "2", features = ["serde"] }
schemars = { version = "1", features = ["rust_decimal1", "chrono04", "uuid1", "url2"] }
#log =======
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

#db ========
diesel = { version = "2", features = ["chrono", "serde_json", "uuid", ], default-features = false }
diesel-async = { version = "0.7", features = ["deadpool", "async-connection-wrapper"] }
diesel-dynamic-schema = "0.2"
diesel-enum = { version = "0.2", features = [] }
deadpool = { version = "0.12", features = [], default-features = false }
diesel_migrations = { version = "2", features = [] }
rust_decimal = { version = "1", features = ["serde-str", "macros", "maths"] }
chrono = { version = "0.4", features = ["serde"] }

#solana ======
anchor-client = { version = "0.32", optional = true, features = ["async"] }
solana-client = "3"
#anchor-spl = { version = "0.32", features = ["default"], optional = true }
#eth ========
alloy = { version = "1", features = ["full", "reqwest-rustls-tls", "std", "essentials", ], optional = true, default-features = false }

#etc =======
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = "0.7"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["default"] }

dotenvy = "0.15"
envy = { version = "0.4" }

uuid = { version = "1", features = ["serde", "v7"] }
anyhow = { version = "1", features = [] }
#strum = { version = "0.27", features = ["default", "derive"] }
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls", "charset", "http2", "macos-system-configuration", ], default-features = false }
tokio-cron-scheduler = { version = "0.15", features = ["default"] }
web_api_gen = { path = "crates/derive_builder" }
derive_more = { version = "2", features = ["full"] }
sha2 = "0.10"
mimalloc = { version = "0.1", features = [] }
log = "0.4.28"

[dev-dependencies]
tracing-test = "0.2"
[workspace]
members = ["crates/*"]
package = { rust-version = "1.89.0" }